# project_duckdb

./: DockerFile  README.md  app.py  pyproject.toml
src/project_duckdb/: main.py
