[project]
name = "project-duckdb"
version = "0.1.0"
description = ""
authors = [
    {name = "mssilva",email = "matheuzdsilva@icloud.com"}
]

packages = [{ include = "project_duckdb", from = "src" }]

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.53.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
